# oof

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  oof.h  readme.md  wrapper.h
cpp_vt_wrapper/: bars_demo.cpp  color_dot_demo.cpp  color_dot_demo.h  cursor_trail_demo.cpp  fireworks_demo.cpp  fireworks_demo.h  radar_demo.cpp  smoothness_test.cpp  smoothness_test.h  snow_demo.cpp  snow_demo.h  text_demo.cpp  text_demo.h  tools.h
demos/: bars_demo.cpp  bars_demo.h  cursor_trail_demo.cpp  cursor_trail_demo.h  demos.vcxproj  demos.vcxproj.filters  fireworks_demo.cpp  implementations.cpp  main.cpp  radar_demo.cpp  radar_demo.h  snow_demo.cpp  text_demo.cpp  tools.h
tests/: cell_pos_tests.cpp  core_tests.cpp  include_doctest.h  pixel_screen_tests.cpp  tests.cpp  tests.vcxproj  tests.vcxproj.filters
